# 10seconds

./: .gitignore  CONTRIBUTING.md  COPYING  Makefile.am  README.md  configure.ac
.github/: ISSUE_TEMPLATE.md
build-aux/m4/: bitcoin_qt.m4
build_msvc/: bitcoin_config.h.in
ci/test/: 00_setup_env_i686_multiprocess.sh  05_before_script.sh  06_script_a.sh  06_script_b.sh
contrib/: README.md  install_db4.sh
depends/: README.md  description.md
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-notes.md  release-process.md  tor.md  zmq.md
doc/man/: 10sec-cli.1  10sec-qt.1  10sec-tx.1  10sec-util.1  10sec-wallet.1  10secd.1  10seconds-cli.1  10seconds-qt.1  10seconds-tx.1  10seconds-util.1  10seconds-wallet.1  10secondsd.1  Makefile.am  biteducoin-cli.1  biteducoin-qt.1  biteducoin-tx.1  biteducoin-util.1  biteducoin-wallet.1  biteducoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  init.cpp  netaddress.h  validation.cpp
test/: README.md  get_previous_releases.py
(+115 files in other folders)
