dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=10secondsd.1
endif

if ENABLE_QT
  dist_man1_MANS+=10seconds-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=10seconds-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=10seconds-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=10seconds-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=10seconds-wallet.1
endif
endif
